# inflearn-rag-with-langchain

./: .gitignore  3.2 rag_with_chroma.ipynb  3.3 rag_without_langchain.ipynb  3.4 rag_with_pinecone.ipynb  3.5 data_processing_markdown.ipynb  3.6 keyword_dictionary.ipynb  3.6 keyword_dictionary_lcel.ipynb  main.py  pyproject.toml  ~$세법(법률)(제21065호)(20260102).doc.docx
rag_basic/: 3.1 환경설정.ipynb  3.2 rag_with_chroma.ipynb  3.3 rag_without_langchain.ipynb  3.4 rag_with_pinecone.ipynb  3.5 data_processing_markdown.ipynb  3.6 keyword_dictionary.ipynb  3.6 keyword_dictionary_lcel.ipynb
streamlit/: chat.py  llm.py  llm_basic.py
streamlit_chatbot/: 4.2 llm_with_history.py  evaluation.ipynb  llm.py
tax_document/: tax.docx
