[project]
name = "inflearn-langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchainhub>=0.1.21",
    "langsmith>=0.6.7",
    "streamlit>=1.53.1",
]
